@@ -267,6 +267,21 @@ rpc.<model>.<method>
 The duration in seconds of the cache for the RPC answer to `method` of the
 model named `model`. It will override the value defined in the model.
 
+count_timeout
+~~~~~~~~~~~~~
+
+The cache timeout duration in seconds of the estimation of records.
+
+Default: ``86400`` (1 day)
+
+count_clear
+~~~~~~~~~~~
+
+The number of operations after which the counting estimation of records is
+cleared.
+
+Default: ``1000``
+
 queue
 -----
 
